# FinancialAnalyst_powered_by_MCP_using_CrewAI_and_Deepseek-R1

./: .gitignore  Installing_and_Running_Ollama.sh  README.md  building_financial_analyst.ipynb  client_finance.py  finance_crew.py  pyproject.toml  server.py
