[project]
name = "projeto-analista-financeiro-mcp-crewai"
version = "0.1.0"
description = "Aqui vamos usar várias tecnologias para construir un Analista Financeiro, usaremos MCP e CrewAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
    "crewai>=0.141.0",
    "crewai-tools>=0.51.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mcp>=1.11.0",
    "ollama>=0.5.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
